DC21-102: 03 > Fixed wrapping issues

--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -269,7 +269,7 @@ ul
 li
 
 label
-  +m-p-w-h-p-t-b-l-r-f(0 -4px 0 0, 10px 20px 10px 10px, 130px)
+  +m-p-w-h-p-t-b-l-r-f(0 0 0 0, 10px 16px 10px 10px, 130px)
   +inlineblock
   +font("", bold, 1em, 18px)
   text-align: right
@@ -1117,6 +1117,7 @@ table.activity, table.activity tbody
     line-height: 38px
 
 .rowform
+  white-space: nowrap
   span
     +m-p-w-h-p-t-b-l-r-f("", 10px 0 10px 0)
     +inlineblock
